app/globals.scss
@import '../styles//reset.scss';
@import '../styles/fonts.scss';
@import '../styles/variables.scss';

* {
  box-sizing: border-box;
}

body {
  font-family: $mont-medium;
  background-color: $color-emtiness;
}

.disableScroll {
  overflow: hidden;
}

button {
  border: none;
  background-color: transparent;
}

